--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 requests         >= 2.25.1
 dataclasses      >= 0.6
 dataclasses-json >= 0.5.4
+marshmallow      >= 3.12.2
+setuptools       >= 57.1.0
+stringcase       >= 1.2.0
