Add backdated support for Python 3.7 so it's supported in jupyter.org and Google colab notebooks

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-requests         >= 2.25.1
-dataclasses      >= 0.6
-dataclasses-json >= 0.5.4
-marshmallow      >= 3.12.2
-setuptools       >= 57.1.0
+typing_extensions >= 3.7.4
+requests          >= 2.23.0
+dataclasses       >= 0.6
+dataclasses-json  >= 0.5.4
+marshmallow       >= 3.12.2
+setuptools        >= 57.1.0
